# 3Dstack-hyrpland

./: .clang-format  .clang-tidy  .commitizen.toml  .gitignore  .pre-commit-config.yaml  .uncrustify.cfg  CLAUDE.md  CMakeLists-minimal.txt  CMakeLists.txt  INSTALL.md  Makefile  README.md  flake.nix  hyprland_stack3d_plugin.md  justfile  main-minimal.cpp  main.cpp  minimal.cpp  test-minimal.cpp  ultra-minimal.cpp
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-test.yml  main.yml  package-release.yml  test-integration.yml  tests.yml
docs/: README.md  architecture.md  configuration.md  installation.md  troubleshooting.md
docs/api/: README.md  Stack3DPlugin.md
docs/examples/: README.md  productivity.md
docs/guides/: development.md
include/: AnimationSystem.hpp  BezierCurve.hpp  LayoutCalculator.hpp  PhysicsMotion.hpp  Stack3DPlugin.hpp
scripts/: build-packages.sh  setup-dev.sh
src/: AnimationSystem.cpp  BezierCurve.cpp  LayoutCalculator.cpp  PhysicsMotion.cpp  Stack3DPlugin.cpp
tests/: Makefile  README.md
tests/mocks/: hyprland_mocks.hpp
